# production_planner

./: .gitignore  .gitmodules  MANIFEST.in  README.md  __init__.py  conftest.py  core.py  datatable.py  environment.yml  install.bat  pack_release.py  pyproject.toml  readme.md  run.bat  satisfactory_production_buildings.json  satisfactory_production_planner.py  screens.py  setup.py  test_base_screens.py  test_init_data_folder.py  test_load.py  test_module.py  test_num_inputs.py  test_recipe.py  test_rows.py  test_save.py
.github/workflows/: main.yml
__data_folder__/: .config.json  r_iron_plate.yaml
__data_folder__/.staging/[main]/: .config.json  000.yaml.sink
auxiliary/: transform_data.py
src/: core.py  datatable.py  production_buildings.json  production_planner.py  screens.py
src/production_planner/: ActionSelector.tcss  DataView.tcss  FilteredListSelector.tcss  Planner.tcss  __init__.py  core.py  datatable.py  dataview.py  header.py  io.py  jsonshelve.py  production_buildings.json  screens.py
src/production_planner/cells/: FilteredListSelector.tcss  PuritySelector.tcss  __init__.py  _cells.py  _selector.py  clockrate.py  count.py  ingredient.py  mk.py  power.py  producer.py  purity.py  recipe.py
src/production_planner/core/: __init__.py  edit.py  link.py  marshal.py  module.py  node.py  nodetree.py  producer.py  recipe.py
src/production_planner/gamedata/: __init__.py  parse.py  production_buildings_v1.0.0.1_366202.json
src/production_planner/help/: __init__.py  help.py  help.tcss
src/production_planner/help/__data_folder__/: empty.yaml  iron_plate2.yaml  iron_plate_clamped.yaml  m_cable_wire.yaml  wire-cable_factory.yaml
with_modules/: test_expand.py  test_save_with_expanded_module.py  test_show_hide.py
with_modules/__data_folder__/: .config.json  iron_plate.yaml  m_Weap_Gas_Filter.yaml  m_Weap_Iron_Rebar.yaml  m_Weap_Powder.yaml  m_Weap_Rifle_Ammo.yaml
with_modules/__data_folder__/.staging/[main]/: 000.yaml  000.yaml.sink
