[project]
name = "production_planner"
version = "0.1.0"
authors = [
    {name = "mitaa", email = "mitaa.ceb@gmail.com"}
    ]
description = "A production planner for Satisfactory"
readme = "README.md"
license= {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
        "Programming Language :: Python :: 3",
        "Development Status :: 3 - Alpha",
        "License :: OSI Approved :: MPL 2 License",
        "Operating System :: OS Independent",
    ]
dependencies = [
    "textual >= 0.79",
    "rich",
    "platformdirs",
    "pyaml",
    "json-store>=4.0",
    "docopt>=0.6.0"
    ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
production_planner = "production_planner:main"
